--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"keywords": [
 		"cordova"
 	],
-	"author": "Martin Buchalik",
+	"author": "N04A",
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/N04A/cordova-plugin-ios-permissions-app-launcher/issues"
